--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
 	},
 	"require": {
 		"php": ">=5.3.7",
-		"vlucas/phpdotenv": "^5.3.1"
+		"vlucas/phpdotenv": "^5.3.1",
+		"firebase/php-jwt": "^6.0"
 	}
 }
